# QuantumMachineLearningFermions

./: .gitignore  =1.8  AdaptVQENuclear.ipynb  AnalysisQuantumChemistry.ipynb  Deformation.ipynb  DriverHamiltonianCKI.ipynb  DriverHamiltonianUSDB.ipynb  EmaNucleare.ipynb  EncodingNuclearShellHamiltonian.ipynb  HartreeFock.ipynb  LoadTheNuclearShellmatrix.ipynb  NuclearPhysics.ipynb  QuantumAnnealing.ipynb  QuantumAnnealingTutorial.ipynb  QuantumChemistry.ipynb  README.md  SampledBasedDiagonalization.ipynb  TESTSPEED.ipynb  TutorialNuclearShellModel.ipynb  Untitled-1.ipynb  adapt_vqe_annealing_ansatz.py  adapt_vqe_hartree_fock.py  ccvqe_new_implementation.py  fig1  nohup.out  output_qml.txt  psi_hf.npy  pyproject.toml  qiskit_fermi_hubbard.py  qq.sd  quantum_annealing_gap_vs_tau.py  quantum_annealing_heavi_nuclei.py  quantum_annealing_plot_cki.py  quantum_chemistry.py  quantum_chemistry_qml.py  quantum_chemistry_qml_disorder.py  requirements.txt  run_variational_sdg.sh  samplebaseddiagonalization_algorithm hf.py  save_nuclearshelltwobodymatrix.py  (+3 more)
data/: GCN5082  cki  gxpf1a  j2.int  kb3g.a42  new_cki  qq.p  rg.5-45  test2bodyhamiltonian.ipynb  usdb.nat
images/: driver_hamiltonian  fig1  fig3  fig4  fig4_bis  fig5
outcmaes/: parameters.json2
quantum_annealing_study/: DriverHamiltonianCKI.ipynb  DriverHamiltonianUSDB.ipynb  QuantumAnnealing.ipynb  quantum_annealing_different_initial_state.py
quantum_chemistry/: QuantumChemistry.ipynb  quantum_chemistry.py  quantum_chemistry_qml.py  quantum_chemistry_qml_disorder.py  run_hartree_fock.py
src/: hamiltonian_utils.py  (+6 more)
(+58 files in other folders)
