[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "QuantumMachineLearningFermions"
version = "0.1.0"
description = "Quantum Machine Learning Fermions utilities"
authors = [
    { name = "Emanuele Costa", email = "emanuele.costa@icc.ub.edu" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]